# loopkit

./: .gitignore  GUIDE.md  README.md  pyproject.toml
bot/: council.py  main.py  memory.py
concepts/: __init__.py  council.py  evaluator_optimizer.py  self_labeling.py
docs/: index.html
evals/: __init__.py  headroom_runner.py  headroom_swebench.py
loops/: base.py
loops/daily_triage/: __init__.py  loop.py
loops/headroom_swebench/: __init__.py  loop.py
loops/hello/: __init__.py  loop.py
loops/kompress/: __init__.py
loops/template/: __init__.py  loop.py
loops/verification/: __init__.py  loop.py
notebooks/: loopkit_hello.ipynb
space/: Dockerfile  README.md  app.py  requirements.txt
